<resources>
    <string name="app_name">Quiz App</string>
    <string name="question1" > What is the best type for numbers in java ? </string>
    <string name="submitBtnText">Submit</string>
    <string name="q4_option1">static</string>
    <string name="q4_option2">public</string>
    <string name="edit_text_hint_text">Is the car an object or a class ?</string>
    <string name="q1_option1">int</string>
    <string name="q1_option2">boolean</string>
    <string name="q1_option3">String</string>
    <string name="q2_option1">private</string>
    <string name="q2_option2">static</string>
    <string name="q2_option3">final</string>
    <string name="q2">which method you can override ?</string>
    <string name="q3">if( .......  )  what type  does it accept ?</string>
    <string name="q4"> Which methods can be overriden ?</string>
</resources>
