<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/q0_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/edit_text_hint_text"
            android:inputType="textCapWords" />

        <!-- the first question -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question1"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radio_q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q1_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:text="@string/q1_option1"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/q1_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/q1_option2"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/q1_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/q1_option3"
                android:textSize="15sp" />

        </RadioGroup>

        <!-- the second question -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/q2"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radio_q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q2_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/q2_option1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/q2_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/q2_option2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/q2_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:paddingLeft="10dp"
                android:text="@string/q2_option3"
                android:textSize="16sp" />


        </RadioGroup>

        <!-- the third question -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/q3"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/q3_answer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <!-- the forth question -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/q4"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox_static"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/q4_option1" />


                <CheckBox
                    android:id="@+id/checkBox_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/q4_option2" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:text="@string/submitBtnText" />
    </LinearLayout>


</ScrollView>